# ai-support-desk-agent

./: .gitignore  OverAllProjectSummary.txt  README.md  pyproject.toml  requirements.txt
app/: main.py
app/agents/: guardrail_agent.py  query_rewriter.py  rag_tool.py  supervisor.py  test_superviser.py
app/models/: db_models.py
app/routers/: analytics_router.py  chat_router.py  docs_router.py  health_router.py
app/services/: chat_service.py  config.py  conversation_service.py  db.py  embedding_service.py  ingestion_service.py  rerank_service.py  vector_store_service.py
app/utils/: chunking.py  csv_parser.py  docx_parser.py  llm_client.py  pdf_parser.py
frontend/: app.py
